update neoforge layer wrapping